# cmake-glad-generator

./: CMakeLists.txt
